--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "purl",
   "private": true,
   "dependencies": {
-    "bootstrap": "4.0.0-beta",
-    "jquery": "^3.2.1",
     "popper.js": "^1.12.5",
-    "tether": "^1.4.0"
+    "jquery": "^3.2.1",
+    "tether": "^1.4.0",
+    "bootstrap": "4.0.0-beta"
   }
 }
