--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "purl",
   "private": true,
   "dependencies": {
-    "popper.js": "^1.12.5",
+    "bootstrap": "4.0.0-beta",
+    "clipboard": "^1.7.1",
     "jquery": "^3.2.1",
-    "tether": "^1.4.0",
-    "bootstrap": "4.0.0-beta"
+    "popper.js": "^1.12.5",
+    "tether": "^1.4.0"
   }
 }
